tests/semantic/invalid/66_i10_grandchild_override_mismatch.hulk
class GrandParent() {
    greet() => "hello";
}
class Parent() is GrandParent() {}
class Child() is Parent() {
    greet() => 1;
}
print(0);
